--- a/WebApiDemo.Web/packages.config
+++ b/WebApiDemo.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.MidwayTester" version="2.0.7" targetFramework="net451" />
   <package id="AngularJS.Animate" version="1.2.16" targetFramework="net451" />
   <package id="AngularJS.Core" version="1.2.16" targetFramework="net451" />
   <package id="AngularJS.Route" version="1.2.16" targetFramework="net451" />
@@ -11,8 +12,8 @@
   <package id="Breeze.Server.ContextProvider" version="1.4.12" targetFramework="net451" />
   <package id="Breeze.Server.WebApi2" version="1.4.12" targetFramework="net451" />
   <package id="FontAwesome" version="4.1.0" targetFramework="net451" />
-  <package id="HotTowel.Angular" version="2.1.0" targetFramework="net451" />
-  <package id="HotTowel.Angular.Breeze" version="2.2.0" targetFramework="net451" />
+  <package id="HotTowel.Angular" version="2.3.0" targetFramework="net451" />
+  <package id="HotTowel.Angular.Breeze" version="2.3.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net451" />
