--- a/WebApiDemo.Services/packages.config
+++ b/WebApiDemo.Services/packages.config
@@ -20,9 +20,11 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="SlowCheetah" version="2.5.10.6" targetFramework="net451" />
+  <package id="SlowCheetah.Xdt" version="1.1.1" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.1" targetFramework="net451" />
   <package id="WebActivator" version="1.5.3" targetFramework="net451" />
 </packages>
